--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "socket.io": "^1.3.6"
   },
   "main": "index-runner.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.3.2"
+  },
   "scripts": {
     "test": "test"
   },
