--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"dbURL":"localhost/MyDatabase","dbUser":"","dbPassword":"","dbTablePrefix":"rtc-"}
+{"dbURL":"localhost/MyDatabase","dbUser":"","dbPassword":"","dbTablePrefix":"demo-"}
